--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -5,7 +5,6 @@ on:
   workflow_dispatch:
 env:
   region: 'eu-west-1'
-  backups-bucket: 'biomage-backups-production'
   pool-name: 'biomage-user-pool-case-insensitive-production'
 
 jobs:
@@ -50,7 +49,7 @@ jobs:
      
       - id: send-to-slack
         name: Send failure notification to Slack
-        if: failure()
+        if: failure() && github.ref == 'refs/heads/master'
         env:
           SLACK_BOT_TOKEN: ${{ secrets.BUILD_STATUS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
