--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -41,7 +41,7 @@ jobs:
       - id: save-to-s3
         name: save backup json to s3
         run: |-
-          BUCKET_NAME="biomage-backups-production-242905224710"
+          BUCKET_NAME="biomage-backups-production-${{steps.setup-aws.outputs.aws-account-id}}"
           current_date=$(date '+%Y-%m-%d.%H-%M-%S')
           userPoolId=$(aws cognito-idp list-user-pools --max-results 20 | jq -c '.UserPools[] | select(.Name | test("${{env.pool-name}}")) | .Id' | tr -d '"' )
           aws s3api put-object --bucket $BUCKET_NAME --key ${current_date}/${{ env.pool-name }}/data.json --body ./${userPoolId}.json
