--- a/cf/canaries.yaml
+++ b/cf/canaries.yaml
@@ -28,6 +28,10 @@ Resources:
         BlockPublicPolicy: True
         IgnorePublicAcls: True
         RestrictPublicBuckets: True
+      LifecycleConfiguration:
+        Rules:
+          - Id: DeletionRule
+            ExpirationInDays: 5
   CanaryExecutionRole:
     Type: "AWS::IAM::Role"
     Properties:
