change ci user name

--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -6,6 +6,12 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Set up key for transmitting secrets between IAC and workflow initiators [managed by github.com/hms-dbmi-cellenics/iac]
 
+Parameters:
+  OrgName:
+    Type: String
+    Default: hms-dbmi-cellenics
+    Description: The environment for which the access group is created.
+
 Resources:
   IACKey:
     Type: AWS::KMS::Key
@@ -26,7 +32,7 @@ Resources:
         - Sid: allow-decryption-to-iac-user
           Effect: Allow
           Principal:
-            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/hms-dbmi-cellenics/iac/"
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/${OrgName}/iac/"
           Action:
           - kms:DescribeKey
           - kms:Decrypt
