--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -10,7 +10,7 @@ Parameters:
   OrgName:
     Type: String
     Default: hms-dbmi-cellenics
-    Description: The environment for which the access group is created.
+    Description: The organisation to which the CI user belongs
 
 Resources:
   IACKey:
@@ -32,7 +32,7 @@ Resources:
         - Sid: allow-decryption-to-iac-user
           Effect: Allow
           Principal:
-            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/${OrgName}/iac/"
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/${OrgName}/iac"
           Action:
           - kms:DescribeKey
           - kms:Decrypt
