--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -32,7 +32,7 @@ Resources:
         - Sid: allow-decryption-to-iac-user
           Effect: Allow
           Principal:
-            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/${OrgName}/iac"
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-users/${OrgName}/iac/ci-user-${OrgName}-iac"
           Action:
           - kms:DescribeKey
           - kms:Decrypt
