--- a/cf/rds.yaml
+++ b/cf/rds.yaml
@@ -79,7 +79,10 @@ Resources:
         # https://docs.aws.amazon.com/secretsmanager/latest/userguide/reference_available-rotation-templates.html#sar-template-postgre-singleuser
         # This lambda will be injected into the stack. Injection requires AWS transform defined above.
         RotationType: PostgreSQLSingleUser
-        RotationLambdaName: !Sub "RDSSecretsManagerRotation${Environment}"
+        RotationLambdaName: !If [SandboxIdIsDefault, 
+          !Sub "RDSSecretsManagerRotation${Environment}", 
+          !Sub "RDSSecretsManagerRotation${Environment}-${SandboxID}"
+        ]
         VpcSubnetIds:
           Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"
         VpcSecurityGroupIds:
