--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -342,12 +342,15 @@ jobs:
           helm repo add fluxcd https://charts.fluxcd.io
           kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
 
+          [[ $ACCOUNT_ID = "242905224710" ]] && GIT_READONLY=false || GIT_READONLY=true
+
           helm upgrade flux fluxcd/flux \
             --set git.url=git@github.com:${{ env.RELEASES_REPOSITORY }} \
             --set git.path="$CLUSTER_ENV" \
             --set git.label="flux-sync-$CLUSTER_ENV" \
             --set git.pollInterval="2m" \
             --set git.timeout="40s" \
+            --set git.readonly=$GIT_READONLY \
             --set syncGarbageCollection.enabled=true \
             --namespace flux \
             --install --wait
@@ -359,6 +362,8 @@ jobs:
             --set git.timeout="40s" \
             --namespace flux \
             --install --wait
+        env:
+          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
 
       - id: get-public-key
         name: Get flux SSH deploy key
