--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -173,147 +173,147 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.region }}
 
-      - id: set-name
-        name: Set name of the CloudFormation stack
-        run: |-
-          echo "Ref is $GITHUB_REF"
-          BASE_NAME=$(basename $FILE_NAME | sed "s/\..*//")
-          STACK_NAME=biomage-$BASE_NAME-$CLUSTER_ENV
+  #     - id: set-name
+  #       name: Set name of the CloudFormation stack
+  #       run: |-
+  #         echo "Ref is $GITHUB_REF"
+  #         BASE_NAME=$(basename $FILE_NAME | sed "s/\..*//")
+  #         STACK_NAME=biomage-$BASE_NAME-$CLUSTER_ENV
 
-          echo "::set-output name=stack-name::$STACK_NAME"
+  #         echo "::set-output name=stack-name::$STACK_NAME"
 
-          if [ "$BASE_NAME" == 'rds' ]; then
-            echo "::set-output name=deploy-rds::true"
-          fi
+  #         if [ "$BASE_NAME" == 'rds' ]; then
+  #           echo "::set-output name=deploy-rds::true"
+  #         fi
 
-        env:
-          FILE_NAME: ${{ matrix.template }}
+  #       env:
+  #         FILE_NAME: ${{ matrix.template }}
 
-      - id: deploy-template
-        name: Deploy CloudFormation template
-        if: ${{ !contains(matrix.template, 'irsa-') }}
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }}"
-          name: ${{ steps.set-name.outputs.stack-name }}
-          template: ${{ matrix.template }}
-          no-fail-on-empty-changeset: "1"
-          capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND"
+  #     - id: deploy-template
+  #       name: Deploy CloudFormation template
+  #       if: ${{ !contains(matrix.template, 'irsa-') }}
+  #       uses: aws-actions/aws-cloudformation-github-deploy@v1
+  #       with:
+  #         parameter-overrides: "Environment=${{ matrix.environment-type }}"
+  #         name: ${{ steps.set-name.outputs.stack-name }}
+  #         template: ${{ matrix.template }}
+  #         no-fail-on-empty-changeset: "1"
+  #         capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND"
 
-      # The following steps are only necessary for IAM Service Account roles.
-      - id: get-oidc
-        if: ${{ contains(matrix.template, 'irsa-') }}
-        name: Get OIDC provider information for IRSA role
-        run: |-
-          OIDC_PROVIDER=$(aws eks describe-cluster --name "biomage-$CLUSTER_ENV" --query "cluster.identity.oidc.issuer" --output text | sed -e "s/^https:\/\///")
-          echo "::set-output name=oidc-provider::$OIDC_PROVIDER"
+  #     # The following steps are only necessary for IAM Service Account roles.
+  #     - id: get-oidc
+  #       if: ${{ contains(matrix.template, 'irsa-') }}
+  #       name: Get OIDC provider information for IRSA role
+  #       run: |-
+  #         OIDC_PROVIDER=$(aws eks describe-cluster --name "biomage-$CLUSTER_ENV" --query "cluster.identity.oidc.issuer" --output text | sed -e "s/^https:\/\///")
+  #         echo "::set-output name=oidc-provider::$OIDC_PROVIDER"
 
-      - id: deploy-irsa-template
-        if: ${{ contains(matrix.template, 'irsa-') }}
-        name: Deploy IRSA CloudFormation template
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }},OIDCProvider=${{ steps.get-oidc.outputs.oidc-provider }}"
-          name: ${{ steps.set-name.outputs.stack-name }}
-          template: ${{ matrix.template }}
-          no-fail-on-empty-changeset: "1"
-          capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
+  #     - id: deploy-irsa-template
+  #       if: ${{ contains(matrix.template, 'irsa-') }}
+  #       name: Deploy IRSA CloudFormation template
+  #       uses: aws-actions/aws-cloudformation-github-deploy@v1
+  #       with:
+  #         parameter-overrides: "Environment=${{ matrix.environment-type }},OIDCProvider=${{ steps.get-oidc.outputs.oidc-provider }}"
+  #         name: ${{ steps.set-name.outputs.stack-name }}
+  #         template: ${{ matrix.template }}
+  #         no-fail-on-empty-changeset: "1"
+  #         capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
 
-  setup-rds-roles:
-    name: Setup RDS roles for default resources
-    runs-on: ubuntu-20.04
-    needs: [setup, deploy-templates]
-    if: ${{ needs.deploy-templates.outputs.deploy-rds == 'true' }}
-    strategy:
-      max-parallel: 1
-      matrix:
-        environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        environment-name: [Biomage]
-    env:
-      CLUSTER_ENV: ${{ matrix.environment-type }}
-    steps:
-      - id: set-up-creds
-        name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.region }}
+  # setup-rds-roles:
+  #   name: Setup RDS roles for default resources
+  #   runs-on: ubuntu-20.04
+  #   needs: [setup, deploy-templates]
+  #   if: ${{ needs.deploy-templates.outputs.deploy-rds == 'true' }}
+  #   strategy:
+  #     max-parallel: 1
+  #     matrix:
+  #       environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
+  #       environment-name: [Biomage]
+  #   env:
+  #     CLUSTER_ENV: ${{ matrix.environment-type }}
+  #   steps:
+  #     - id: set-up-creds
+  #       name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ env.region }}
 
-      # This step is needed to change the environment name (e.g. staging) into its uppercase form.
-      # This is required because the action that is used in get-rds-secrets store the secret in environment variables,
-      # with uppercase letters (see action ref). Therefore, we need the uppercased form of the environment
-      # Which is output in .outputs.uppercase of this step.
-      - id: setup-rds-env
-        name: Uppercase environment name
-        uses: ASzc/change-string-case-action@v2
-        with:
-          string: ${{ matrix.environment-type }}
+  #     # This step is needed to change the environment name (e.g. staging) into its uppercase form.
+  #     # This is required because the action that is used in get-rds-secrets store the secret in environment variables,
+  #     # with uppercase letters (see action ref). Therefore, we need the uppercased form of the environment
+  #     # Which is output in .outputs.uppercase of this step.
+  #     - id: setup-rds-env
+  #       name: Uppercase environment name
+  #       uses: ASzc/change-string-case-action@v2
+  #       with:
+  #         string: ${{ matrix.environment-type }}
 
-      - id: get-rds-secrets
-        name: Export RDS secrets into environment variables
-        uses: abhilash1in/aws-secrets-manager-action@v2.0.0
-        with:
-          secrets: aurora-${{ matrix.environment-type }}
-          parse-json: true
+  #     - id: get-rds-secrets
+  #       name: Export RDS secrets into environment variables
+  #       uses: abhilash1in/aws-secrets-manager-action@v2.0.0
+  #       with:
+  #         secrets: aurora-${{ matrix.environment-type }}
+  #         parse-json: true
 
-      - id: check-rds-secrets
-        name: Check RDS secrets are fetched
-        run: |-
-          # These checks if the RDS username and passwords are set
-          if [ -z $AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME ]; then
-            echo "RDS username not provided"
-            exit 1
-          fi
-          if [ -z $AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD ]; then
-            echo "RDS password not provided"
-            exit 1
-          fi
+  #     - id: check-rds-secrets
+  #       name: Check RDS secrets are fetched
+  #       run: |-
+  #         # These checks if the RDS username and passwords are set
+  #         if [ -z $AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME ]; then
+  #           echo "RDS username not provided"
+  #           exit 1
+  #         fi
+  #         if [ -z $AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD ]; then
+  #           echo "RDS password not provided"
+  #           exit 1
+  #         fi
 
-      - id: setup-rds-roles
-        name: Setup RDS roles for default RDS instances
-        run: |-
-          INSTANCE_ID=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=rds-${CLUSTER_ENV}-ssm-agent" \
-            --output text \
-            --query 'Reservations[*].Instances[*].InstanceId')
-          if [ -z $INSTANCE_ID ]; then
-            echo "Can not connect to RDS agent: No instances found for $CLUSTER_ENV"
-            exit 1
-          fi
-          CLUSTER_NAME=aurora-cluster-${CLUSTER_ENV}-default
-          RDSHOST=$(aws rds describe-db-cluster-endpoints \
-            --region $REGION \
-            --db-cluster-identifier $CLUSTER_NAME \
-            --filter Name=db-cluster-endpoint-type,Values='writer' \
-            --query 'DBClusterEndpoints[0].Endpoint' \
-            --output text)
-          if [ -z $RDSHOST ]; then
-            echo "Failed getting RDS host with name $CLUSTER_NAME"
-            exit 1
-          fi
-          SETUP_ROLES_CMD="
-            PGPASSWORD=${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD} psql \
-              --host=${RDSHOST} \
-              --port=5432 \
-              --username=${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} \
-              --dbname=aurora_db <<EOF
-                CREATE ROLE api_role WITH LOGIN;
-                CREATE ROLE dev_role WITH LOGIN;
-                GRANT USAGE ON SCHEMA public TO api_role;
-                GRANT USAGE, SELECT ON ALL SEQUENCES IN SCHEMA public to api_role;
-                GRANT dev_role TO ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME};
-                ALTER DEFAULT PRIVILEGES FOR USER dev_role IN SCHEMA public GRANT SELECT, INSERT, UPDATE, DELETE ON TABLES TO api_role;
-                ALTER DEFAULT PRIVILEGES FOR USER dev_role IN SCHEMA public GRANT USAGE, SELECT ON SEQUENCES TO api_role;
-                REVOKE dev_role FROM ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME};
-                GRANT rds_iam TO api_role;
-                GRANT rds_iam, ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} TO dev_role;
-              EOF"
-          aws ssm send-command --instance-ids "$INSTANCE_ID" \
-            --document-name AWS-RunShellScript \
-            --parameters "commands='$SETUP_ROLES_CMD'"
-        env:
-          REGION: ${{ env.region }}
+  #     - id: setup-rds-roles
+  #       name: Setup RDS roles for default RDS instances
+  #       run: |-
+  #         INSTANCE_ID=$(aws ec2 describe-instances \
+  #           --filters "Name=tag:Name,Values=rds-${CLUSTER_ENV}-ssm-agent" \
+  #           --output text \
+  #           --query 'Reservations[*].Instances[*].InstanceId')
+  #         if [ -z $INSTANCE_ID ]; then
+  #           echo "Can not connect to RDS agent: No instances found for $CLUSTER_ENV"
+  #           exit 1
+  #         fi
+  #         CLUSTER_NAME=aurora-cluster-${CLUSTER_ENV}-default
+  #         RDSHOST=$(aws rds describe-db-cluster-endpoints \
+  #           --region $REGION \
+  #           --db-cluster-identifier $CLUSTER_NAME \
+  #           --filter Name=db-cluster-endpoint-type,Values='writer' \
+  #           --query 'DBClusterEndpoints[0].Endpoint' \
+  #           --output text)
+  #         if [ -z $RDSHOST ]; then
+  #           echo "Failed getting RDS host with name $CLUSTER_NAME"
+  #           exit 1
+  #         fi
+  #         SETUP_ROLES_CMD="
+  #           PGPASSWORD=${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD} psql \
+  #             --host=${RDSHOST} \
+  #             --port=5432 \
+  #             --username=${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} \
+  #             --dbname=aurora_db <<EOF
+  #               CREATE ROLE api_role WITH LOGIN;
+  #               CREATE ROLE dev_role WITH LOGIN;
+  #               GRANT USAGE ON SCHEMA public TO api_role;
+  #               GRANT USAGE, SELECT ON ALL SEQUENCES IN SCHEMA public to api_role;
+  #               GRANT dev_role TO ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME};
+  #               ALTER DEFAULT PRIVILEGES FOR USER dev_role IN SCHEMA public GRANT SELECT, INSERT, UPDATE, DELETE ON TABLES TO api_role;
+  #               ALTER DEFAULT PRIVILEGES FOR USER dev_role IN SCHEMA public GRANT USAGE, SELECT ON SEQUENCES TO api_role;
+  #               REVOKE dev_role FROM ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME};
+  #               GRANT rds_iam TO api_role;
+  #               GRANT rds_iam, ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} TO dev_role;
+  #             EOF"
+  #         aws ssm send-command --instance-ids "$INSTANCE_ID" \
+  #           --document-name AWS-RunShellScript \
+  #           --parameters "commands='$SETUP_ROLES_CMD'"
+  #       env:
+  #         REGION: ${{ env.region }}
 
   report-if-failed:
     name: Report if workflow failed
