--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -32,6 +32,7 @@ jobs:
     strategy:
       matrix:
         environment-name: [Biomage]
+    environment: ${{ matrix.environment-name }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -160,6 +161,7 @@ jobs:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
         environment-name: [Biomage]
         template: ${{fromJson(needs.get-modified-templates.outputs.files)}}
+    environment: ${{ matrix.environment-name }}
     steps:
       - id: checkout
         name: Check out source code
@@ -229,6 +231,7 @@ jobs:
   #     matrix:
   #       environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
   #       environment-name: [Biomage]
+  #   environment: ${{ matrix.environment-name }}
   #   env:
   #     CLUSTER_ENV: ${{ matrix.environment-type }}
   #   steps:
