now test the changed users workflow

--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -1,8 +1,8 @@
 name: Update infrastructure users on AWS
 on:
   push:
-    branches:
-      - use-environment-secrets
+    # branches:
+    #   - use-environment-secrets
     paths:
       - 'infra/cluster_admins_*'
       - 'infra/cluster_users'
