now test the changed users workflow

--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -3,11 +3,11 @@ on:
   push:
     # branches:
     #   - use-environment-secrets
-    paths:
-      - 'infra/cluster_admins_*'
-      - 'infra/cluster_users'
-      - 'infra/biomage-read-only-group/**'
-      - 'infra/cf-state-machine-role.yaml'
+    # paths:
+    #   - 'infra/cluster_admins_*'
+    #   - 'infra/cluster_users'
+    #   - 'infra/biomage-read-only-group/**'
+    #   - 'infra/cf-state-machine-role.yaml'
 env:
   region: 'eu-west-1'
 
