Add version that checks enviornment name

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -357,7 +357,7 @@ jobs:
           helm repo add fluxcd https://charts.fluxcd.io
           kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
 
-          [[ $ACCOUNT_ID = "242905224710" ]] && GIT_READONLY=false || GIT_READONLY=true
+          [[ $ENVIRONMENT_NAME = "Biomage" ]] && FLUX_GIT_READ_ONLY=false || FLUX_GIT_READ_ONLY=true
 
           helm upgrade flux fluxcd/flux \
             --set git.url=git@github.com:${{ env.RELEASES_REPOSITORY }} \
@@ -365,7 +365,7 @@ jobs:
             --set git.label="flux-sync-$CLUSTER_ENV" \
             --set git.pollInterval="2m" \
             --set git.timeout="40s" \
-            --set git.readonly=$GIT_READONLY \
+            --set git.readonly=$FLUX_GIT_READ_ONLY \
             --set syncGarbageCollection.enabled=true \
             --namespace flux \
             --install --wait
@@ -378,15 +378,17 @@ jobs:
             --namespace flux \
             --install --wait
         env:
-          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
+          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
       - id: get-public-key
         name: Get flux SSH deploy key
+        if: matrix.environment-name == 'Biomage'
         run: |-
           fluxctl identity --k8s-fwd-ns flux | tee ~/flux.pub
 
       - id: add-key-to-github
         name: Add Flux deploy key to GitHub repository
+        if: matrix.environment-name == 'Biomage'
         run: |-
           # find existing key IDs. save them to a file
           curl \
