Select the secrets from the staging that corresponds to the sandbox id

--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -97,7 +97,7 @@ jobs:
         uses: abhilash1in/aws-secrets-manager-action@v2.0.0
         name: Export RDS secrets into environment variables
         with:
-          secrets: aurora-staging
+          secrets: aurora-staging-${{ github.event.inputs.sandbox-id }}
           parse-json: true
 
       - id: check-rds-secrets
