--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -154,27 +154,15 @@ jobs:
           no-fail-on-empty-changeset: "1"
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND"
 
-      - id: get-rds-secrets
+      - id: rds-secrets
         if: ${{ github.event.inputs.with-rds == 'True' }}
-        uses: abhilash1in/aws-secrets-manager-action@v2.0.0
-        name: Export RDS secrets into environment variables
+        uses: t-botz/aws-secrets-manager-read-action@v2
+        name: Outputs RDS secrets to get into the db
         with:
-          secrets: aurora-staging-${{ github.event.inputs.sandbox-id }}
-          parse-json: true
-
-      - id: check-rds-secrets
-        if: ${{ github.event.inputs.with-rds == 'True' }}
-        name: Check RDS secrets are fetched
-        run: |-
-          # These checks if the RDS username and passwords are set
-          if [ -z $AURORA_STAGING_USERNAME ]; then
-            echo "RDS username not provided"
-            exit 1
-          fi
-          if [ -z $AURORA_STAGING_PASSWORD ]; then
-            echo "RDS password not provided"
-            exit 1
-          fi
+          secret-id: aurora-staging-${{ github.event.inputs.sandbox-id }}
+          mask-value: true
+          mask-json-values: true
+          keys-as-outputs: true
 
       - id: setup-rds-roles
         if: ${{ github.ref == 'refs/heads/master' && github.event.inputs.with-rds == 'True' }}
@@ -225,6 +213,8 @@ jobs:
         env:
           REGION: ${{ env.region }}
           SANDBOX_ID: ${{ github.event.inputs.sandbox-id }}
+          AURORA_STAGING_USERNAME: ${{ steps.rds-secrets.outputs.username }}
+          AURORA_STAGING_PASSWORD: ${{ steps.rds-secrets.outputs.password }}
 
       - id: deploy-template-sns
         name: Deploy CloudFormation stack for SNS topic
