--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -196,6 +196,11 @@ Resources:
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:global-cluster:*"
               - Effect: Allow
                 Action:
+                  - rds:DescribeClusters
+                Resource:
+                  - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:*"
+              - Effect: Allow
+                Action:
                   - rds:DescribeDBClusterEndpoints
                 Resource:
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:aurora-cluster-${Environment}"
