--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -314,7 +314,7 @@ jobs:
               EOF"
           aws ssm send-command --instance-ids "$INSTANCE_ID" \
             --document-name AWS-RunShellScript \
-            --parameters "commands='$SETUP_ROLES_CMD'"
+            --parameters 'commands="'"$SETUP_ROLES_CMD"'"'
         env:
           REGION: ${{ env.region }}
 
