--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -211,6 +211,16 @@ Resources:
                 Resource:
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:*"
 
+        - PolicyName: "can-upload-cf-templates"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 's3:PutObject'
+                Resource:
+                  - "arn:aws:s3:::cf-templates-*"
+
         - PolicyName: "can-raise-support-questions"
           PolicyDocument:
             Version: "2012-10-17"
