--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -4,7 +4,7 @@ on:
     - cron: '0 1 * * 0'
   workflow_dispatch:
 env:
-  region: {{ secrets.AWS_REGION }}
+  region: ${{ secrets.AWS_REGION }}
   pool-name: 'biomage-user-pool-case-insensitive-production'
 
 jobs:
