--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -294,7 +294,7 @@ jobs:
             exit 1
           fi
           SETUP_ROLES_CMD="
-            PGPASSWORD='${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD}' psql \
+            PGPASSWORD=\'${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_PASSWORD}\' psql \
               --host=${RDSHOST} \
               --port=5432 \
               --username=${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} \
@@ -310,6 +310,7 @@ jobs:
                 GRANT rds_iam TO api_role;
                 GRANT rds_iam, ${AURORA_${{ steps.setup-rds-env.outputs.uppercase }}_USERNAME} TO dev_role;
               EOF"
+
           aws ssm send-command --instance-ids "$INSTANCE_ID" \
             --document-name AWS-RunShellScript \
             --parameters "commands='$SETUP_ROLES_CMD'"
