readded needed policy

--- a/infra/cf-state-machine-role.yaml
+++ b/infra/cf-state-machine-role.yaml
@@ -25,6 +25,24 @@ Resources:
             Action: "sts:AssumeRole"
       Path: "/"
       Policies:
+        - PolicyName: !Sub "can-trace-xray-${Environment}"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "xray:PutTraceSegments"
+                  - "xray:PutTelemetryRecords"
+                  - "dynamodb:DescribeTable"
+                  - "xray:GetSamplingRules*"
+                  - "xray:GetSamplingTargets"
+                  - "dynamodb:Scan"
+                  - "dynamodb:BatchWrite*"
+                  - "dynamodb:DeleteItem"
+                  - "dynamodb:Update*"
+                  - "dynamodb:PutItem"
+                Resource:
+                  - '*'
         - PolicyName: !Sub "can-publish-to-sns-${Environment}"
           PolicyDocument:
             Version: "2012-10-17"
